fixes (#849)
* fix image stretched article + dynamic year

* fix pubky logo poorly

* load more hot posts

* fix firefox font issue

* long title for article

* increase SEO title post + fix links post

* fix createPost BottomSheet

* Update apps/intro/pages/index.tsx

* Update apps/web/app/onboarding/components/_Content.tsx

---------

--- a/apps/web/app/global.css
+++ b/apps/web/app/global.css
@@ -1,15 +1,25 @@
 @font-face {
   font-family: 'Inter Tight';
-  src: url('/Inter_Tight/InterTight-VariableFont_wght.ttf') format('truetype');
+  src:
+    url('/Inter_Tight/InterTight-VariableFont_wght.woff2') format('woff2'),
+    url('/Inter_Tight/InterTight-VariableFont_wght.woff') format('woff'),
+    url('/Inter_Tight/InterTight-VariableFont_wght.ttf') format('truetype');
   font-weight: 100 900;
   font-style: normal;
+  font-display: swap;
 }
 
 @font-face {
   font-family: 'Inter Tight';
-  src: url('/Inter_Tight/InterTight-Italic-VariableFont_wght.ttf') format('truetype');
+  src:
+    url('/Inter_Tight/InterTight-Italic-VariableFont_wght.woff2')
+      format('woff2'),
+    url('/Inter_Tight/InterTight-Italic-VariableFont_wght.woff') format('woff'),
+    url('/Inter_Tight/InterTight-Italic-VariableFont_wght.ttf')
+      format('truetype');
   font-weight: 100 900;
   font-style: italic;
+  font-display: swap;
 }
 
 @tailwind base;
@@ -17,6 +27,7 @@
 @tailwind utilities;
 
 body {
+  font-family: 'Inter Tight', Arial, sans-serif;
   background-color: #05050a;
   text-rendering: optimizeLegibility !important;
   -webkit-font-smoothing: antialiased !important;
